# RAG-PRACTICE

./: .gitignore  practice.ipynb  pyproject.toml  requirements.txt
notebook/: document.ipynb  typesense.ipynb
