[project]
name = "sohan-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "onnxruntime==1.17.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
]
